<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Employee2Activity">

    <ScrollView
        android:id="@+id/Scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutVertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:id="@+id/Company"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/company"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/companyName"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:hint="@string/company1"
                    android:inputType="textPersonName"
                    android:textSize="18sp"
                    android:autofillHints="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="Employee Name:"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/employeeName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="E-mail Id:"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="Official E-mail address "
                    android:inputType="textEmailAddress"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="Phone Number:"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editText8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Registered phone Number"
                    android:inputType="phone"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Are you having cough or fever or flu in the past 14 days? "
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="YES">

                </Button>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="NO"></Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Are you currently serving any Leave Of Absence Or Work From Home?"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="YES">

                </Button>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="NO"></Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Did you travel overseas in the last 14 days?"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="YES">

                </Button>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="NO"></Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="If, yes then where did you visit?"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:hint="Country's Name"
                    android:textSize="14dp"></EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/have_you_ever_came_in_contact_with_a_covid_patient"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>
            </LinearLayout>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="40sp"
                android:hint="Type Yes or No"></EditText>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Your Body Temperature today:"
                    android:textSize="18sp"
                    android:textStyle="bold"></TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:hint="in Fahrenheit"
                    android:textSize="18sp"></EditText>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Did you visit any other company,lab or a containment or red zone?"
                android:textSize="18sp"
                android:textStyle="bold"></TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="Type Yes or No. If Yes, mention the area you visited"
                android:textSize="18sp"></EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="Any other relevant information:"
                android:textSize="18sp"
                android:textStyle="bold">

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="Your response is valuable to us."
                android:textSize="18sp">

            </EditText>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>